--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
 
     <title>Document</title>
 </head>
@@ -36,9 +36,9 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque deleniti quos minus inventore ut molestias dolore perspiciatis rerum ea maiores.
 
             </p>
-            <img class="food" src="food.jpg" alt="orange">
+            <img class="food" src="/static/images/food.jpg" alt="orange">
         </div>
-        <script src="main.js"></script>
+        <script src="/static/js/main.js"></script>
     
 
 </body>
